...
    <string name="confirm_positive">Yes</string>
    <string name="continue_on_phone">Continue on your phone</string>
    <string name="connect">Connect</string>
    <string name="continue_connect">Continue</string>
    <string name="controls_setting_category">Device controls</string>
...
    <string name="gestures_pointers_two">Using two fingers</string>
    <string name="gestures_pointers_three">Using three fingers</string>
    <string name="get_help">Get help</string>
    <string name="help">Help</string>
    <string name="hide_password">Hide password</string>
...
    <string name="manage_widgets_summary">Edit your widgets. Adding/deleting can only be done from the home screen.</string>
    <string name="manage_widgets">Manage widgets</string>
    <string name="manual_setup">Enter address manually</string>
    <string name="manual_title">What is your Apporo aiot address?</string>
    <string name="matter_commissioning_unavailable">Matter is currently unavailable</string>
...
    <string name="more_entities">More entities</string>
    <string name="need_help">Need help?</string>
    <string name="navigate_up">Navigate up</string>
    <string name="nfc_btn_create_duplicate">Create a Duplicate</string>
    <string name="nfc_btn_fire_event">Fire Event</string>
...
    <string name="home_assistant_branding_icon_content_description">Apporo aiot logo</string>
    <string name="loading_content_description">Loading</string>
    <string name="searching_home_network">Searching on home network</string>
    <string name="server_discovery_no_server_info">Check that your Apporo aiot is powered on and you\'re connected to the same network. You can enter the address manually if you know it.</string>
    <string name="server_discovery_connect">Connect</string>
    <string name="welcome_home_assistant_title">Apporo aiot app</string>
    <string name="welcome_details">Access your Apporo aiot server on the go.\n\nApporo aiot puts privacy and security first and runs locally in your home.</string>
    <string name="welcome_connect_to_ha">Connect to my Apporo aiot</string>
    <string name="welcome_learn_more">Learn more</string>
    <string name="name_your_device_title">How would you like to name this device?</string>
    <string name="name_your_device_content">This is used to identify your device in your Apporo aiot.</string>
    <string name="name_your_device_save">Save</string>
    <string name="manual_server_title">What is your Apporo aiot address?</string>
    <string name="manual_server_connect">Connect</string>
    <string name="manual_server_wrong_url">Invalid URL</string>
    <string name="connection_screen_malformed_url">Verify that your Apporo aiot address is correct</string>
    <string name="clear_text">Clear text</string>
    <string name="local_first_title">Local by default.\nRemote when you\'re ready.</string>
    <string name="local_first_content">Your Apporo aiot is only accessible on your home network. To control your smart home from anywhere, you can set up remote access later in your settings.\n\nFor now, you\'re securely connected to your local network.</string>
...
    <string name="block_insecure_open_settings">Open settings</string>
    <string name="block_insecure_change_security_level">Change security level</string>
    <string name="wear_mtls_content">Your Apporo aiot server requires TLS client certificate authentication. Select a TLS client certificate file to install it on your Wear OS device.</string>
    <string name="wear_mtls_next">Next</string>
    <string name="wear_mtls_open_error">This password does not open this file.</string>
    <string name="wear_mtls_deselect_file">Deselect file</string>
...
