...
            discoveryState = discoveryState,
        )
    }
}

@VisibleForTesting
internal const val ONE_SERVER_FOUND_MODAL_TAG = "OneServerFoundModal"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
private fun OneServerFound(
    onConnectClick: (serverUrl: URL) -> Unit,
    onDismiss: () -> Unit,
...
